--- a/経営情報各論B_第14回_多変量解析(1)_回帰分析.ipynb
+++ b/経営情報各論B_第14回_多変量解析(1)_回帰分析.ipynb
@@ -46,7 +46,7 @@
     "- 説明変数：ある現象の原因として定義する変数\n",
     "- 目的変数：結果として定義する変数\n",
     "- 回帰分析の主な目的：説明変数を用いて目的変数を予測すること\n",
-    "![image1.png](回帰分析.png)\n",
+    "![image1.png](https://drive.google.com/uc?id=1G9oAgih7ntk3KVvXsKLqRjWPxTSX7Fak)\n",
     "- 線形単回帰分析では，以下のような回帰式で説明変数$X$と目的変数$Y$の関係を表現する\n",
     "$$\n",
     "Y=a\\times X+b\n",
@@ -469,7 +469,7 @@
    "metadata": {},
    "source": [
     "#### 例2：映画Rogue Oneのタイトル検索数（日本公開日の2016年12月16日から4週間分）のデータ（最も検索の多かった日を100とした相対数）\n",
-    "![image1.png](相対検索数.png)\n",
+    "![image1.png](https://drive.google.com/uc?id=1-1vA22SfVsmvXVjABkE9Am_U9e2_Ti06)\n",
     "\n",
     "この表をファイル\"RogueOneSearchInterest28days.csv\"として保存し，Dayの値を説明変数，Search Interest の値を目的変数として線形回帰分析を行う．"
    ]
@@ -844,14 +844,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\murakawa\\AppData\\Local\\Temp\\ipykernel_14744\\830298441.py:7: MatplotlibDeprecationWarning: Axes3D(fig) adding itself to the figure is deprecated since 3.4. Pass the keyword argument auto_add_to_figure=False and use fig.add_axes(ax) to suppress this warning. The default value of auto_add_to_figure will change to False in mpl3.5 and True values will no longer work in 3.6.  This is consistent with other Axes classes.\n",
+      "C:\\Users\\murakawa\\AppData\\Local\\Temp\\ipykernel_14744\\2229164247.py:7: MatplotlibDeprecationWarning: Axes3D(fig) adding itself to the figure is deprecated since 3.4. Pass the keyword argument auto_add_to_figure=False and use fig.add_axes(ax) to suppress this warning. The default value of auto_add_to_figure will change to False in mpl3.5 and True values will no longer work in 3.6.  This is consistent with other Axes classes.\n",
       "  ax=Axes3D(fig)\n"
      ]
     },
@@ -874,6 +874,7 @@
     "\n",
     "fig=plt.figure()\n",
     "ax=Axes3D(fig)\n",
+    "fig.add_axes(ax)\n",
     "\n",
     "ax.scatter3D(x1, x2, y)\n",
     "ax.set_xlabel(\"x1\")\n",
@@ -910,14 +911,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\murakawa\\AppData\\Local\\Temp\\ipykernel_14744\\1752022673.py:3: MatplotlibDeprecationWarning: Axes3D(fig) adding itself to the figure is deprecated since 3.4. Pass the keyword argument auto_add_to_figure=False and use fig.add_axes(ax) to suppress this warning. The default value of auto_add_to_figure will change to False in mpl3.5 and True values will no longer work in 3.6.  This is consistent with other Axes classes.\n",
+      "C:\\Users\\murakawa\\AppData\\Local\\Temp\\ipykernel_14744\\1098966359.py:3: MatplotlibDeprecationWarning: Axes3D(fig) adding itself to the figure is deprecated since 3.4. Pass the keyword argument auto_add_to_figure=False and use fig.add_axes(ax) to suppress this warning. The default value of auto_add_to_figure will change to False in mpl3.5 and True values will no longer work in 3.6.  This is consistent with other Axes classes.\n",
       "  ax=Axes3D(fig)\n"
      ]
     },
@@ -945,6 +946,7 @@
     "# 分析結果をグラフにする\n",
     "fig=plt.figure()\n",
     "ax=Axes3D(fig)\n",
+    "fig.add_axes(ax)\n",
     "\n",
     "ax.scatter3D(x1, x2, y)\n",
     "ax.set_xlabel(\"x1\")\n",
